deployment/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lzs-chatbot-my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "lzs-chatbot-my-prod"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.org/client-max-body-size: "10m"
spec:
  tls:
  - hosts:
    - lzs-chatbot.pipe.my
    - lzs-chatbot-admin.pipe.my

    secretName: lzs-chatbot-my-prod

  rules:
  - host: lzs-chatbot.pipe.my
    http:
      paths:
      - backend:
          serviceName: lzs-chatbot-chat
          servicePort: 5100    
  - host: lzs-chatbot-admin.pipe.my
    http:
      paths:
      - backend:
          serviceName: lzs-chatbot-webapp
          servicePort: 80
